Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/varargs/5088429/T5088429Neg02.out
T5088429Neg02.java:19:9: compiler.err.ref.ambiguous: m, kindname.method, m(T5088429Neg02.A...), T5088429Neg02, kindname.method, m(T5088429Neg02.A,T5088429Neg02.A...), T5088429Neg02
1 error
